microshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microshift-app
spec:
  selector:
    app.kubernetes.io/name: hello-microshift
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
